--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     "clsx": "^2.1.0",
     "googleapis": "^146.0.0",
     "lucide-react": "^0.477.0",
-    "next": "15.2.1",
+    "next": "^15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
