--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.0",
+    "framer-motion": "^12.6.3",
     "googleapis": "^146.0.0",
     "lucide-react": "^0.477.0",
     "next": "^15.2.4",
